Refactored adding to the inventory
